# parametrizable-floating-point-verilog

./: .gitignore  .lintrules  .verible-format-flags  .verible-lint-rules  Bender.yml  README.md  pyproject.toml  requirements.txt
.github/workflows/: format.yml  lint.yml  test.yml
scripts/: format.sh
src/: floating_point_adder.v  floating_point_converter.v  floating_point_multiplier.v  floating_point_multiplier_adder.v  is_special_float.v  leading_one_detector.v  result_rounder.v
test/: abc.v  common.py  floating_point_adder_tb.v  floating_point_multiplier_tb.v  leading_one_detector_tb.v  test_floating_point_adder.py  test_floating_point_multiplier.py  test_leading_one_detector.py  utils.py
test/tests/: floating_point_adder_tests.py  floating_point_multiplier_tests.py  leading_one_detector_tests.py
test/utils/: defines.vh  tasks.v
