[project]
name = "parametrizable-floating-point-verilog"
version = "0.0.1"
authors = [
  { name = "Douwe den Blanken" }
]
description = "Verilog implementation of a parametrizable floating point unit"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["float", "floating point", "fp32", "fp16", "fp8", "bf16", "brain float"]
dependencies = [
  'pytest',
  'cocotb-test',
  'cocotb'
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/V0XNIHILI/parametrizable-floating-point-verilog"
"Bug Tracker" = "https://github.com/V0XNIHILI/parametrizable-floating-point-verilog/issues"
